# coderisk

./: .agent-p3c-complete  .coderisk.yml.example  .dockerignore  .env.example  .gitignore  .goreleaser.yml  AGENTIC_WORKFLOW_GUIDE.md  AGENT_1_COMPLETE.txt  AGENT_2_COMPLETE.txt  AGENT_3_COMPLETE.txt  AGENT_4_COMPLETE.txt  AGENT_5_COMPLETE.txt  AGENT_ORCHESTRATION_GUIDE.md  AGGRESSIVE_REFACTORING_NEXT_STEPS.md  ASSOCIATED_WITH_EDGE_BUG_ANALYSIS.md  ATOMIZER_COMPLETION_REPORT.md  ATOMIZER_LOGGING_FIX.md  ATOMIZER_VALIDATION_REPORT.md  BACKTESTING_IMPLEMENTATION_SUMMARY.md  BACKTESTING_README.md  CHANGELOG.md  CLAUDE_CODE_SETUP.md  CLOUD_MIGRATION_READINESS.md  CLOUD_MIGRATION_READINESS_ASSESSMENT.md  COGNEE_SETUP.md  COMPREHENSIVE_TEST_REPORT.md  CONFIDENCE_SCORING_INVESTIGATION.md  CONTEXT_AWARE_OPTIMIZATIONS.md  CONTEXT_OPTIMIZATIONS_COMPLETE.md  CONTRIBUTING.md  CORRECTED_LAUNCH_STRATEGY.md  CRISK_INGEST_BUG_FIX.md  CRITICAL_CORRECTION_TREESITTER.md  CURRENT_POSTGRES_SCHEMA_OVERVIEW.md  DATA_READINESS_STATUS.md  DEMO_IMPLEMENTATION_PLAN.md  DEMO_QUICK_START.md  DISTRIBUTION_GUIDE.md  Dockerfile  E2E_TEST_FINAL_REPORT.md  (+138 more)
.github/workflows/: ci.yml  (+2 more)
coderisk/: __init__.py  __main__.py  cli.py
crisk/: __init__.py  cli.py
dev_docs/: DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_WORKFLOW.md  README.md  spec.md
docs/: .gitkeep  AGENT_P2A_COMPLETION_REPORT.md  ASSOCIATED_WITH_EDGE_SYSTEM.md  AVOIDING_RATE_LIMITS.md  DEMO_MVP_IMPLEMENTATION_STATUS.md  EDGE_CONFIDENCE_HIERARCHY.md  ERROR_HANDLING_AND_LOGGING_IMPLEMENTATION_PLAN.md  ERROR_HANDLING_AND_LOGGING_REVISED_PLAN.md  ERROR_HANDLING_REVISED_DEPLOYMENT_MODES.md  NEO4J_IMPLEMENTATION_STATUS_REPORT.md  NEO4J_OPTIMIZATION_COMPLETE.md  NEO4J_ROUTING_GUIDE.md  README.md  STRATEGIC_ARCHITECTURE_PLAN.md  cognee_operations_research.md  cognee_setup_status.md  github_data_extraction_spec.md
examples/: basic_usage.py  ci_integration.py
migrations/: 001_add_microservice_schema.sql  001_code_block_schema.sql  002_align_existing_tables.sql  002_file_identity_map.sql  003_code_block_changes.sql  004_code_blocks_risk_columns.sql  005_code_block_imports.sql  006_processing_views.sql  007_unique_constraints.sql  008_code_block_changes_unique.sql  009_add_idempotency_timestamps.sql  010_add_function_signatures.sql  011_function_identity_map.sql  012_rate_limit_and_chunks.sql  013_add_last_modified_date.sql  014_coupling_metadata_columns.sql  014_coupling_metadata_columns_completion.sql  README_014_COUPLING_MIGRATION.md
packaging/: DOCKER_HUB_SETUP.md  HOMEBREW_SETUP.md  PACKAGING_SUMMARY.md  RELEASE_CHECKLIST.md  crisk.rb
schema/: 00_init_schema.sql  01_helper_views.sql  README.md
schemas/: ai-mode-v1.0.json
scripts/: analyze_queries.sh  apply_indexes.sh  benchmark_performance.sh  clean_docker.sh  cleanup_and_rerun_repo11.sh  compute_topological_ordering.go  e2e_clean_test.sh  fix_timeline_references.go  init_postgres.sql  rebuild_all_layers.sh  rebuild_postgres_schema.sh  run_backtest.sh  run_linking_test.sh  setup-env.sh  test_complete_pipeline.sh  test_full_pipeline.sh  test_llm.go  test_mcp_use_pipeline.sh  test_migrations.sh  test_rate_limiter.sh  test_temporal.go  validate-env.sh  validate_all_components.sh  validate_complete_pipeline.sh  validate_file_resolution.sh  validate_graph_edges.sh  validate_neo4j_schema.go  verify_safe_deletions.sh  verify_temporal_calculator.sql  wipe_neo4j_repo.go
test_data/: omnara_ground_truth_expanded.json
test_results/: backtest_20251102_184518_comprehensive.json  backtest_20251102_184518_semantic.json  backtest_20251102_184518_summary.json  backtest_20251102_184518_temporal.json  backtest_20251102_184923_comprehensive.json  backtest_20251102_184923_semantic.json  backtest_20251102_184923_summary.json  backtest_20251102_184923_temporal.json  backtest_20251102_191206_comprehensive.json  backtest_20251102_191206_semantic.json  backtest_20251102_191206_summary.json  backtest_20251102_191206_temporal.json  backtest_20251102_191421_comprehensive.json  backtest_20251102_191421_semantic.json  backtest_20251102_191421_summary.json  backtest_20251102_191421_temporal.json  backtest_20251102_192909_comprehensive.json  backtest_20251102_192909_semantic.json  backtest_20251102_192909_summary.json  backtest_20251102_192909_temporal.json  backtest_20251102_192953_comprehensive.json  backtest_20251102_192953_semantic.json  backtest_20251102_192953_summary.json  backtest_20251102_192953_temporal.json  (+21 more)
(+606 files in other folders)
